# agent-workbench-python

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: python-test.yml
shell_scripts/: check.sh
src/: agent.py
src/agent/: conduit.py
src/agent/config/: command.py  creator.py  operation.py  operations.py  session.py  tool_helper.py
src/agent/miscellaneous/: paths.py
src/config/: command.py  operations.py
test/agent/config/: command_test.py  operation_test.py
