[tool.poetry]
name = "agent"
version = "0.0.0"
description = "python wrapper for bench ai agent cli"
authors = [
    "Sriram Govindan <sriram@bench-ai.com>",
    "Anshul Narain <naraina1@uci.edu>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^24.4.2"
pylint = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
